have EAR-based JAX-RS EJB example working end-to-end